--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       </div>
       <div class="row">
         <div class="column">
-            <img src="photo.jpg" width="100%">
+            <img src="img/photo.jpg" width="100%">
         </div>
         <div class="column">
-            <img src="resort.jpg" width="100%">
+            <img src="img/resort.jpg" width="100%">
         </div>
         <div class="column">
-            <img src="shami.jpge.webp" width="100%">
+            <img src="img/team.jpeg" width="100%">
         </div>
             </div>
             <div class="row">
@@ -54,13 +54,13 @@
               </div>
                   </div>
                   <div class="text-box">
-                    <img src="cm.jpg" >
+                    <img src="img/cm.jpg" >
                     <h1><a  href="https://www.thehindu.com/news/national/tamil-nadu/cm-stalin-meets-migrant-workers-at-tirunelveli-allays-fears-triggered-by-social-media-rumours/article66591527.ece">CM Stalin meets migrant workers at Tirunelveli, allays fears triggered by social media rumours</a></h1><br>
                     <h6>Mr. Stalin, who was proceeding to the Thoothukudi airport from Nagercoil where he attended a few functions on Monday and Tuesday, entered the factory of Kanam Latex Industries Pvt. Ltd. near Kaavalkinaru on the Tirunelveli-Kanniyakumari district border and interacted with the migrant labourers.</h6>
                  <h6>The Chief Minister enquired with labourers from Jharkhand about the food, stay, working conditions, working hours and other facilities being provided to them by the management. Most of them told Mr. Stalin that they felt secure.</h6>
                   </div><br>
                   <div class="box">
-                    <img src="cry.jpg">
+                    <img src="img/cry.jpg">
                     <h1><a href="https://economictimes.indiatimes.com/topic/indian-cryptocurrency">Private cryptocurrencies will never replace fiat currency</a></h1>
                   <h6>Private cryptocurrencies will not replace fiat currencies, said Nandan Nilekani, cofounder and non-executive chairman of Infosys, on Friday.
 
